--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "decktape": "^2.10.0",
     "grunt-contrib-clean": "^2.0.0",
     "grunt-contrib-nodeunit": "^2.0.0"
   }
