--- a/package.json
+++ b/package.json
@@ -43,7 +43,12 @@
   "license": "MIT",
   "dependencies": {
     "decktape": "^2.10.0",
+    "diff": "^3.5.0",
+    "extend": "^3.0.2",
     "grunt-contrib-clean": "^2.0.0",
-    "grunt-contrib-nodeunit": "^2.0.0"
+    "grunt-contrib-nodeunit": "^2.0.0",
+    "js-yaml": "^3.13.1",
+    "lodash": "^4.17.15",
+    "set-value": "^2.0.1"
   }
 }
